# sentinelforge

./: .gitignore  .replit  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  pyproject.toml  replit.md  start.sh
.github/workflows/: codeql.yml  secret-scan.yml
ai/: AI_CONTEXT.md  AI_HANDOVER.md  AI_RULES.md
docs/: architecture.md  observability.md  roadmap.md  security-architecture.md  threat-model.md
docs/policies/: cerbos-examples.yaml  opa-examples.md
infra/: .env.example  README.md  docker-compose.yml
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/loki/: loki.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yml
services/api/: Dockerfile  requirements.txt
services/api/src/: main.py
services/api/src/api/v1/: agents.py  auth.py  health.py  runs.py  tools.py
services/api/src/core/: config.py  redis.py  telemetry.py
services/api/src/db/: base.py  session.py
