[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "fastapi==0.110.0",
    "gunicorn==21.2.0",
    "httpx==0.27.0",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.0.2",
    "sqlalchemy==2.0.28",
    "structlog==24.1.0",
    "uvicorn[standard]==0.27.1",
]
