[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    # Upgraded from 0.110.0 to fix starlette DoS vulnerabilities (CVE-2024-47874, CVE-2024-24762)
    # Requires starlette>=0.40.0 which is included in fastapi>=0.115.0
    "fastapi==0.115.5",
    "gunicorn==22.0.0",
    "httpx==0.27.0",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    # NOTE: python-jose has an unpatched CVE (algorithm confusion with ECDSA keys).
    # Migration to authlib or python-jwt is recommended for production use.
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.26",
    "redis==5.0.2",
    "sqlalchemy==2.0.28",
    "structlog==24.1.0",
    # Upgraded from 0.27.1 to be compatible with fastapi 0.115.x
    "uvicorn[standard]==0.30.6",
    # Pinned explicitly to fix Minerva timing attack (CVE-2024-31497) in ecdsa<0.19.0
    "ecdsa>=0.19.2",
]
